.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/Custom_Rule__c.object-meta.xml
<CustomObject>
    <label>Custom Rule</label>
    <nameField>
        <label>Custom Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>