.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Additional_Uplift_Hours__c.field-meta.xml
<CustomField>
    <fullName>Additional_Uplift_Hours__c</fullName>
    <label>Additional Uplift Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>