.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Allowance_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Pay_Code__c</fullName>
    <formula>Payee_Allowance_Record__r.tc9_pr__Pay_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowance Pay Code</label>
    <type>Text</type>
</CustomField>