.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Allowance_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Payment_Frequency__c</fullName>
    <description>Determines the frequency of payment for this allowance.
Pay Rule allowances are automatically processed with the defined frequency at the time of Timesheet interpretation.</description>
    <inlineHelpText>Determines the frequency of payment for this allowance.
Pay Rule allowances are automatically processed with the defined frequency at the time of Timesheet interpretation.</inlineHelpText>
    <label>Allowance Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Shift Hours</fullName>
            </value>
            <value>
                <fullName>One Per Shift</fullName>
            </value>
            <value>
                <fullName>One Per Shift - Allowance Only</fullName>
            </value>
            <value>
                <fullName>Shift Hours - Allowance Only</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Allowance Hours</fullName>
            </value>
            <value>
                <fullName>Shift</fullName>
                <isActive>false</isActive>
                <label>Shift</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>