.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Available_on_Active_App__c.field-meta.xml
<CustomField>
    <fullName>Available_on_Active_App__c</fullName>
    <description>Defines if the Timesheet Allowance will be available for employee selection via the Active App.</description>
    <inlineHelpText>Defines if the Timesheet Allowance will be available for employee selection via the Active App.</inlineHelpText>
    <label>Available on Active App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>