.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competency</label>
    <referenceTo>sirenum__TicketType__c</referenceTo>
    <relationshipLabel>Custom Rules</relationshipLabel>
    <relationshipName>Custom_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>