.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>sirenum__ProActiveContract__c</referenceTo>
    <relationshipLabel>Custom Rules</relationshipLabel>
    <relationshipName>Custom_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>