.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Name of Employee if custom rule is related to a Shift</description>
    <formula>Shift__r.sirenum__Contact__r.FirstName + &quot; &quot; +  Shift__r.sirenum__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of Employee if custom rule is related to a Shift</inlineHelpText>
    <label>Employee</label>
    <type>Text</type>
</CustomField>