.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Employee_Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Entry_Type__c</fullName>
    <description>Allows the user to choose how allowances should be captured - either as Start/End Times or by default Quantity.</description>
    <inlineHelpText>Allows the user to choose how allowances should be captured - either as Start/End Times or by default Quantity.</inlineHelpText>
    <label>Employee Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
                <default>true</default>
                <label>Quantity</label>
            </value>
            <value>
                <fullName>Start/End Times</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>