.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Identifies the End Time of the Allowance when time captured is enabled for the related Payee Allowance Record</description>
    <inlineHelpText>Identifies the End Time of the Allowance when time captured is enabled for the related Payee Allowance Record</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>