.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>Expense_Description__c</fullName>
    <label>Expense Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>