.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Expense_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Expense_Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Pay Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Expense Rule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Custom Rules</relationshipLabel>
    <relationshipName>Custom_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>