.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/frmEndTimeTXT__c.field-meta.xml
<CustomField>
    <fullName>frmEndTimeTXT__c</fullName>
    <formula>TEXT( End_Time__c )</formula>
    <label>frmEndTimeTXT</label>
    <type>Text</type>
</CustomField>