.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/frmStartTimeTXT__c.field-meta.xml
<CustomField>
    <fullName>frmStartTimeTXT__c</fullName>
    <formula>TEXT(Start_Time__c)</formula>
    <label>frmStartTimeTXT</label>
    <type>Text</type>
</CustomField>