.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Includes_GST__c.field-meta.xml
<CustomField>
    <fullName>Includes_GST__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Includes GST</label>
    <type>Checkbox</type>
</CustomField>