.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Interpretation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Interpretation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interpretation Rule</label>
    <referenceTo>tc9_et__Interpretation_Rule__c</referenceTo>
    <relationshipLabel>Custom Rules</relationshipLabel>
    <relationshipName>Custom_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>