.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Interpretation_Type__c.field-meta.xml
<CustomField>
    <fullName>Interpretation_Type__c</fullName>
    <inlineHelpText>The type of custom Interpretation Rule to be applied.</inlineHelpText>
    <label>Interpretation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimum Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>