.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role</label>
    <referenceTo>sirenum__Team__c</referenceTo>
    <relationshipLabel>Custom Rules</relationshipLabel>
    <relationshipName>Custom_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>