.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Maximum_AP_Quantity_Per_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Maximum_AP_Quantity_Per_Timesheet__c</fullName>
    <description>This field sets the maximum quantity for auto-processed allowances per timesheet. Use this field instead of the similarly named field on the related Payee Allowance Record to avoid issues with the 2cloudnine Sirenum Integration. 

If you leave this field blank, there will be no maximum limit.</description>
    <inlineHelpText>This field sets the maximum quantity for auto-processed allowances per timesheet. Use this field instead of the similarly named field on the related Payee Allowance Record to avoid issues with the 2cloudnine Sirenum Integration. 

If you leave this field blank, there will be no maximum limit.</inlineHelpText>
    <label>Maximum AP Quantity Per Timesheet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>