.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Maximum_Hours_to_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Hours_to_Uplift__c</fullName>
    <inlineHelpText>Specify the Timesheet Entry quantity for the end range to qualify for Minimum Engagement. Any Timesheet Entries with a quantity above the value will not be considered for Minimum Engagement.</inlineHelpText>
    <label>Maximum Hours to Uplift</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>