.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Minimum_Hours_to_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Hours_to_Uplift__c</fullName>
    <inlineHelpText>Specify the Timesheet Entry quantity for the starting range to qualify for Minimum Engagement. Any Timesheet Entries with a quantity below the value will not be considered for Minimum Engagement.</inlineHelpText>
    <label>Minimum Hours to Uplift</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>