.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Name_for_Community__c.field-meta.xml
<CustomField>
    <fullName>Name_for_Community__c</fullName>
    <formula>IF(
NOT(ISBLANK(Payee_Allowance_Record__c)),Payee_Allowance_Record__r.Name,
IF(
NOT(ISBLANK(Timesheet_Activity__c)),Timesheet_Activity__r.Name,
IF(
NOT(ISBLANK(Award_Classification__c)),Name,&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name for Community</label>
    <type>Text</type>
</CustomField>