.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Payee_Allowance_Record__c.field-meta.xml
<CustomField>
    <fullName>Payee_Allowance_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Allowance Record</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Payee_Allowance_Record__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Timesheet Allowance Template Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Payee_Allowance_Record__c</referenceTo>
    <relationshipLabel>Custom Rules</relationshipLabel>
    <relationshipName>Custom_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>