.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Payee_Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>Payee_Allowance_Type__c</fullName>
    <formula>Payee_Allowance_Record__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Allowance Type</label>
    <type>Text</type>
</CustomField>