.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>The quantity of the claimed allowance when the &apos;Allowance Payment Frequency&apos; is &apos;Quantity&apos;.</description>
    <inlineHelpText>The quantity of the claimed allowance when the &apos;Allowance Payment Frequency&apos; is &apos;Quantity&apos;.</inlineHelpText>
    <label>Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>