.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Rate_Selection_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Selection_Type__c</fullName>
    <description>Defines how the rate of pay/charge will be determined for Allowances when creating Assignment Rates&quot;
Award-Based Rate: The rate will be calculated based on the employee&apos;s Award Classification and Award Level.
Fixed Rate: A flat rate will be applied, regardless of the employee&apos;s classification or level.</description>
    <inlineHelpText>Defines how the rate of pay/charge will be determined for Allowances when creating Assignment Rates&quot;
Award-Based Rate: The rate will be calculated based on the employee&apos;s Award Classification and Award Level.
Fixed Rate: A flat rate will be applied, regardless of the employee&apos;s classification or level.</inlineHelpText>
    <label>Rate Selection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Award-Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>