.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeID__c</fullName>
    <formula>RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordTypeID</label>
    <type>Text</type>
</CustomField>