.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>sirenum__Shift__c</referenceTo>
    <relationshipLabel>Custom Rules</relationshipLabel>
    <relationshipName>Custom_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>