.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Shift_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Shift_Processing_Status__c</fullName>
    <description>The related Shifts Timesheets processing status</description>
    <formula>IF(
NOT(ISBLANK(Shift__c)),Shift__r.tc9_ext_sirint__Timesheet__r.tc9_et__Transaction_Creation_Status__c, &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The related Shifts Timesheets processing status</inlineHelpText>
    <label>Shift Processing Status</label>
    <type>Text</type>
</CustomField>