.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Identifies the Start Time of the Allowance when time captured is enabled for the related Payee Allowance Record</description>
    <inlineHelpText>Identifies the Start Time of the Allowance when time captured is enabled for the related Payee Allowance Record</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>