.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Template_Group__c.field-meta.xml
<CustomField>
    <fullName>Template_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Custom Rule to a Template Group.</description>
    <inlineHelpText>Relates the Custom Rule to a Template Group.</inlineHelpText>
    <label>Template Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Template_Group__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Custom Rules</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Custom Rules</relationshipLabel>
    <relationshipName>Custom_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>