.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Timesheet_Activities_to_Include__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Activities_to_Include__c</fullName>
    <inlineHelpText>Specify which Timesheet Activities will be included when uplifting Timesheet Entries for Minimum Engagement. Any Timesheet Activities not included will not qualify for Minimum Engagement.</inlineHelpText>
    <label>Timesheet Activities to Include</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleepover</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>