.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Timesheet_Activity__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Project_Code__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Timesheet Activity - Template Level</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Project_Code__c</referenceTo>
    <relationshipLabel>Custom Rules</relationshipLabel>
    <relationshipName>Custom_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>