.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Total_Amount_Ex_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Ex_Tax__c</fullName>
    <label>Total Amount Ex Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>