.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/Total_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Amount__c</fullName>
    <label>Total Tax Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>