.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/TS_Entry_Gap_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>TS_Entry_Gap_to_Exclude__c</fullName>
    <inlineHelpText>Specifies the gap in time (in minutes) between two Timesheet Entries where Minimum Engagement does not apply. 
If a value of 60.00 is entered, any two Timesheet Entry records that start or end within 60 minutes of the next Timesheet Entry will not qualify for Minimum Engagement.</inlineHelpText>
    <label>TS Entry Gap to Exclude</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>