.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/fields/TS_Entry_Hours_to_Uplift__c.field-meta.xml
<CustomField>
    <fullName>TS_Entry_Hours_to_Uplift__c</fullName>
    <inlineHelpText>Specifies the Minimum Engagement. Timesheet Entries that qualify for Minimum Engagement will be uplifted to the value entered.</inlineHelpText>
    <label>TS Entry Hours to Uplift</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>