.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/recordTypes/Expense_Rule.recordType-meta.xml
<RecordType>
    <fullName>Expense_Rule</fullName>
    <active>true</active>
    <label>Expense Rule</label>
</RecordType>