.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/recordTypes/Interpretation.recordType-meta.xml
<RecordType>
    <fullName>Interpretation</fullName>
    <active>true</active>
    <description>Used for Custom Rules related to Interpretation</description>
    <label>Interpretation</label>
</RecordType>