.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/recordTypes/Pay_Rule.recordType-meta.xml
<RecordType>
    <fullName>Pay_Rule</fullName>
    <active>true</active>
    <label>Pay Rule</label>
</RecordType>