.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>RecordType_Name__c</columns>
    <columns>Award_Level__c</columns>
    <columns>Allowance_Pay_Code__c</columns>
    <columns>Template_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>